--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -34,7 +34,7 @@
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
     <script th:src="@{/management/econews/buttonsAJAX.js}"></script>
     <style>
-        .text{
+        .text {
             white-space: nowrap;
             overflow: hidden;
             max-width: 150px;
@@ -56,8 +56,9 @@
                             <div class="buttons">
                                 <a href="#deleteAllSelectedModal" id="btnDelete" class="btn btn-remove disabled"
                                    data-toggle="modal">
-                                    <div>[[#{greenCity.pages.delete}]]</div></a>
-                                <a href="#addEcoNewsModal" addEcoNewsForm  id="addEcoNewsModalBtn"
+                                    <div>[[#{greenCity.pages.delete}]]</div>
+                                </a>
+                                <a href="#addEcoNewsModal" addEcoNewsForm id="addEcoNewsModalBtn"
                                    class="btn btn-secondary" data-toggle="modal" th:onclick="addBtnDisabled()">
                                     <div>[[#{greenCity.econews.page.add.eco.news}]]</div>
                                 </a>
@@ -67,21 +68,41 @@
                         <div class="row-box-and-sort">
                             <div class="main-search">
                                 <!-- Search Form  -->
-                                <form class="form-inline searching" action="#">
-                                    <input id="search" type="text"  class="form-search" name="searchReg" th:placeholder="#{greenCity.pages.search}"
-                                           onkeyup="searchTableFunction()" style="margin-left: -82px;">
+                                <form th:action="@{eco-news}" class="form-inline searching">
+                                    <input id="search" type="text" class="form-search" th:name="query"
+                                           onkeyup="searchTableFunction()">
                                     <input class="search-submit-btn" type="submit">
                                 </form>
-                                    <button id="econews-filter-button" class="filter-button">  <!--onclick="openForm()"  -->
-                                        <img src="/img/filter-icon.svg" alt="Filter icon">Filter
-                                    </button>
-                                    <!-- todo-->
+                                <button id="econews-filter-button" class="filter-button"
+                                        onclick="openEcoNewsFilterForm()">
+                                    <img src="/img/filter-icon.svg" alt="Filter icon">Filter
+                                </button>
+                                <div class="form-popup" id="filter">
+                                    <form class="form-container"
+                                          style="width: 280px" method="post" th:action="@{eco-news}">
+                                        <label>Filter by user:</label>
+                                        <select class="form-control" name="author">
+                                            <option value="0">Select author</option>
+                                            <option th:each="author : ${authors}"
+                                                    th:value="${author}"
+                                                    th:text="${author.getName()}"></option>
+                                        </select>
+                                        <input type="text" name="name" class="form-control" required th:name="author">
+                                        <table class="table">
+                                        </table>
+                                        <div style="float: right;margin-top: 30px; margin-bottom: 18px; ">
+                                            <button type="submit" class="filter-btn" style="float: right">
+                                                <b>[[#{greenCity.pages.popup.save.}]]</b>
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
 
                             <div class="filter-list-grid">
                                 <div class="dropdown size">
                                     <img src="/img/arrow-down.svg" alt="arrow-icon" class="change_color">
-                                    <button class="dropbtn size">20</button>
+                                    <button class="dropbtn size" th:text="${pageSize}"></button>
                                     <div class="dropdown-content size">
                                         <a class="lightgrey" onclick="saveItemsOnPage('20')">20</a>
                                         <a class="lightgrey" onclick="saveItemsOnPage('40')">40</a>
@@ -103,18 +124,26 @@
                                 </th>
                                 <th>
                                     [[#{greenCity.pages.table.id}]]
+                                    <img id="id-icon" class="sorting" src="/img/arrow-up.svg" alt="arrow-icon"
+                                         onclick="orderByNameField('id')">
                                     <span class="table-filter-icon filter"></span>
                                 </th>
                                 <th>
                                     [[#{greenCity.pages.table.userName}]]
+                                    <img id="user-icon" class="sorting" style="left: 65%" src="/img/arrow-up.svg"
+                                         alt="arrow-icon" onclick="orderByNameField('author.name')">
                                     <span class="table-filter-icon filter"></span>
                                 </th>
 
                                 <th>[[#{greenCity.pages.table.title}]]
+                                    <img id="title-icon" class="sorting" src="/img/arrow-up.svg" alt="arrow-icon"
+                                         onclick="orderByNameField('title')">
                                     <span class="table-filter-icon filter"></span>
                                 </th>
 
                                 <th>[[#{greenCity.pages.table.text}]]
+                                    <img id="text-icon" class="sorting" src="/img/arrow-up.svg" alt="arrow-icon"
+                                         onclick="orderByNameField('text')">
                                     <span class="table-filter-icon filter"></span>
                                 </th>
 
@@ -142,8 +171,8 @@
                                            <label th:for="checkbox+${iterStatus.count}" for="checkbox1"></label>
                                        </span>
                                     </td>
-                                    <td ><a class="id-link" th:text="${econew.id}"
-                                            th:href="@{/management/eco-news/{id} (id=${econew.id})}"/></td>
+                                    <td><a class="id-link" th:text="${econew.id}"
+                                           th:href="@{/management/eco-news/{id} (id=${econew.id})}"/></td>
                                     <td class="text" th:text="${econew.author.getName()}"></td>
                                     <td class="text" th:text="${econew.title}"></td>
                                     <td class="text" th:text="${econew.content}"></td>
@@ -152,16 +181,15 @@
                                             <img th:src="${econew.imagePath}" style="height:inherit; max-width: 51px">
                                         </div>
                                         <div th:if="${econew.imagePath eq null}">
-                                            <img src="/img/eco-news-default-large.png" style="height:inherit; max-width: 51px">
+                                            <img src="/img/eco-news-default-large.png"
+                                                 style="height:inherit; max-width: 51px">
                                         </div>
                                     </td>
-                                    <td style = "width: 173px">
+                                    <td style="width: 173px">
                                         <div class="dropdown role">
-                                            <button class="dropbtn role" th:text="${econew.tags.get(0)}">
-                                            </button>
                                             <img class="rotate" src="/img/arrow-down.svg" alt="arrow-icon">
                                             <div class="dropdown-content role" style="width:173px; height: auto;">
-                                                <a th:each="tag, iterStatus :${econew.tags}" th:text="${tag}"></a>                                            </div>
+                                                <a th:each="tag, iterStatus :${econew.tags}" th:text="${tag}"></a></div>
                                         </div>
                                     </td>
                                     <!--todo-->
@@ -230,10 +258,12 @@
             <div id="addEcoNewsModal" class="modal fade">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <form th:action="@{management/eco-news/save}" method="post" id="addEcoNewsForm" enctype="multipart/form-data">
+                        <form th:action="@{management/eco-news/save}" method="post" id="addEcoNewsForm"
+                              enctype="multipart/form-data">
                             <div class="modal-header">
                                 <h4 class="modal-title">[[#{greenCity.econews.page.add.eco.news}]]</h4>
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
+                                </button>
                             </div>
                             <div class="modal-body">
                                 <input type="hidden" class="form-control" name="id" value="0" readonly required>
@@ -269,11 +299,13 @@
                                 <div class="form-group">
                                     <label>[[#{greenCity.pages.table.source}]]</label>
                                     <textarea type="text" class="form-control" name="source"></textarea>
-                                    <span th:id="errorModalSavesource" id="errorModalSavesource" class="errorSpan"></span>
+                                    <span th:id="errorModalSavesource" id="errorModalSavesource"
+                                          class="errorSpan"></span>
                                 </div>
                                 <div class="form-group">
                                     <label>[[#{greenCity.pages.table.image}]]</label>
-                                    <input type="file" class="form-control" name="imagePath" id="creationFile" placeholder="ferf">
+                                    <input type="file" class="form-control" name="imagePath" id="creationFile"
+                                           placeholder="ferf">
                                     <span th:id="errorModalSavefile" class="errorSpan"></span>
                                 </div>
 
@@ -295,7 +327,8 @@
                         <form id="">
                             <div class="modal-header">
                                 <h4 class="modal-title">[[#{greenCity.pages.popup.delete.all.h}]]</h4>
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
+                                </button>
                             </div>
                             <div class="modal-body">
                                 <p>[[#{greenCity.pages.popup.delete.all.h1}]]</p>
