--- a/core/src/main/resources/templates/core/management_user.html
+++ b/core/src/main/resources/templates/core/management_user.html
@@ -66,42 +66,48 @@
                             <div th:id="addUserModal" class="modal fade">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
-                                        <form th:action="@{/management/users/register}" method="post" id="addUserForm">
+                                        <form action="#" th:action="@{/management/users/register}" class="needs-validation" method="post" id="addUserForm" novalidate>
                                             <div class="modal-header">
                                                 <h4 class="modal-title-act">[[#{greenCity.user.page.add.user}]]</h4>
                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                                             </div>
                                             <div class="modal-body" id="addModalBody">
-                                                <input type="hidden" class="form-control" name="id" value="-1" readonly required>
+                                                <input type="hidden" class="form-control" name="id" th:value="-1"  readonly required>
                                                 <div class="form-group">
                                                     <label>[[#{greenCity.pages.table.userName}]]</label>
-                                                    <input type="text" class="form-control" name="name" required>
-                                                    <span id="errorModalSaveName" class="errorSpan"></span>
+                                                    <input type="text" class="form-control" name="name"  minlength="6" maxlength="30" required>
+                                                    <div class="invalid-feedback">
+                                                        [[#{greenCity.user.page.name.validation.error}]]
+                                                    </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>[[#{greenCity.pages.table.email}]]</label>
-                                                    <input type="text" class="form-control" name="email" required>
-                                                    <span id="errorModalSaveEmail" class="errorSpan"></span>
+                                                    <input type="email" class="form-control" name="email" required>
+                                                    <div class="invalid-feedback">
+                                                        [[#{greenCity.user.page.email.validation.error}]]
+                                                    </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label>[[#{greenCity.pages.table.role}]]</label>
-                                                    <select class="form-control" name="role">
-                                                        <option selected="selected">ROLE_USER</option>
-                                                        <option>ROLE_ADMIN</option>
-                                                        <option>ROLE_MODERATOR</option>
+                                                    <select class="form-control" name="role" required >
+                                                        <option value="" hidden>Select a role</option>
+                                                        <option th:each="role : ${T(greencity.enums.Role).values()}"
+                                                                th:value="${role}"
+                                                                th:text="${role}">
+                                                        </option>
                                                     </select>
-                                                    <span id="errorModalSaveRole" class="errorSpan"></span>
+                                                    <div class="invalid-feedback">
+                                                        [[#{greenCity.user.page.role.validation.error}]]
+                                                    </div>
                                                 </div>
+
                                                 <div class="form-group">
                                                     <label>[[#{greenCity.pages.table.status}]]</label>
-                                                    <input type="text" class="form-control" name="userStatus" value="CREATED" readonly
-                                                           required>
-                                                    <span id="errorModalSaveUserStatus" class="errorSpan"></span>
+                                                    <input type="text" class="form-control" name="userStatus" value="CREATED" readonly required>
                                                 </div>
                                             </div>
                                             <div class="modal-footer">
-                                                <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal"
-                                                       th:value="#{greenCity.pages.popup.cancel.}">
+                                                <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
                                                 <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.add.}"  id="submitAddBtn">
                                             </div>
                                         </form>
@@ -270,7 +276,7 @@
 <!--                                    </form>-->
 <!--         третя таблиця                       </div>-->
                             </th>
-                            <th style="width: 136px;">
+                            <th style="width: 240px;">
                                 [[#{greenCity.pages.table.role}]]
                                 <img id="role-icon" class="sorting" style="left: 55%" src="/img/arrow-up.svg" alt="arrow-icon" onclick="sortByFieldName('role')">
                                 <span class="table-filter-icon"></span>
@@ -300,34 +306,9 @@
 <!--        четрверте  видиме                      </div>-->
                             </th>
                             <th style="width: 131px;">
-
                                 [[#{greenCity.pages.table.status}]]
                                 <img id="tags-icon" class="sorting" style="left: 50%" src="/img/arrow-up.svg" alt="arrow-icon" onclick="sortByFieldName('userStatus')">
                                 <span class="table-filter-icon"></span>
-<!--                                <div class="name-filter-form">-->
-<!--                                    <div class="filter-sorting-buttons">-->
-<!--                                        <button class="sort-buttons asc" onclick="byNameFieldAsc('userStatus')">Ascending</button>-->
-<!--                                        <button class="sort-buttons" onclick="byNameFieldDesc('userStatus')">Descending</button>-->
-<!--                                    </div>-->
-<!--                                    <form action="/management/users" id="userStatusFilterForm"-->
-<!--                                          method="GET" >-->
-<!--                                        <select class="form-search filter"-->
-<!--                                                th:name="userStatus"-->
-<!--                                                th:value="${fields eq null ? '' : fields.userStatus}">-->
-<!--                                            <option th:text="ACTIVATED" th:value="2"/>-->
-<!--                                            <option th:text="WARNED" th:value="0"/>-->
-<!--                                            <option th:text="DEACTIVATED" th:value="1"/>-->
-<!--                                        </select>-->
-<!--                                        <div class="filter-checkbox">-->
-<!--                                            <input type="checkbox" class="filter-checkbox-input">-->
-<!--                                            <p class="filter-checkbox-text">save filtering</p>-->
-<!--                                        </div>-->
-<!--                                        <div class="filter-buttons">-->
-<!--                                            <button class="filter-cancel">Cancel</button>-->
-<!--                                            <button type="submit" class="filter-apply">Save changes</button>-->
-<!--                                        </div>-->
-<!--                                    </form>-->
-<!--           п'яте                     </div>-->
                             </th>
                         </tr>
 <!--                        Table content-->
@@ -350,7 +331,7 @@
                                     <div th:id="'editUserModal'+${user.getId()}" class="modal fade">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
-                                                <form th:id="'editUserForm'+${user.getId()}">
+                                                <form th:id="'editUserForm'+${user.getId()}" class="needs-validation" novalidate>
                                                     <div class="modal-header">
                                                         <h4 class="modal-title">Edit User</h4>
                                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -359,36 +340,44 @@
                                                         <div class="form-group">
                                                             <label>ID</label>
                                                             <input th:value="${user.getId()}" type="text" class="form-control" id="id" name="id" readonly required>
-                                                            <span th:id="errorModalUpdateid+${user.getId()}" class="errorSpan"></span>
                                                         </div>
                                                         <div class="form-group">
                                                             <label>User name</label>
-                                                            <input th:value="${user.getName()}" type="text" class="form-control" id="name" name="name" required>
-                                                            <span th:id="errorModalUpdateName+${user.getId()}" class="errorSpan"></span>
+                                                            <input th:value="${user.getName()}" type="text"  class="form-control" id="name" name="name" minlength="6" maxlength="30" required>
+                                                            <div class="invalid-feedback">
+                                                                [[#{greenCity.user.page.name.validation.error}]]
+                                                            </div>
                                                         </div>
                                                         <div class="form-group">
                                                             <label>Email</label>
-                                                            <input th:value="${user.getEmail()}" type="text" class="form-control" id="email" name="email" required>
-                                                            <span th:id="errorModalUpdateEmail+${user.getId()}" class="errorSpan"></span>
+                                                            <input th:value="${user.getEmail()}" type="email" class="form-control" id="email" name="email" required>
+                                                            <div class="invalid-feedback">
+                                                                [[#{greenCity.user.page.email.validation.error}]]
+                                                            </div>
                                                         </div>
                                                         <div class="form-group">
                                                             <label>Credo</label>
                                                             <input th:value="${user.getUserCredo()}" type="text" class="form-control" id="userCredo" name="userCredo" required>
-                                                            <span th:id="errorModalUpdateuserCredo+${user.getId()}" class="errorSpan"></span>
                                                         </div>
                                                         <div class="form-group">
                                                             <label>Role</label>
                                                             <select class="form-control" name="role" id="role">
-                                                                <option th:selected="${user.getRole().toString() == 'ROLE_USER'}">ROLE_USER</option>
-                                                                <option th:selected="${user.getRole().toString() == 'ROLE_MODERATOR'}">ROLE_MODERATOR</option>
-                                                                <option th:selected="${user.getRole().toString() == 'ROLE_ADMIN'}">ROLE_ADMIN</option>
+                                                                <option th:each="role : ${T(greencity.enums.Role).values()}"
+                                                                        th:value="${role}"
+                                                                        th:text="${role}"
+                                                                        th:selected="${role} == ${user.getRole()}">
+                                                                </option>
                                                             </select>
-                                                            <span th:id="errorModalUpdaterole+${user.getId()}" class="errorSpan"></span>
+                                                            <div class="invalid-feedback">
+                                                                [[#{greenCity.user.page.role.validation.error}]]
+                                                            </div>
                                                         </div>
                                                         <div class="form-group">
                                                             <label for="userStatus">Status</label>
                                                             <input th:value="${user.getUserStatus().name()}" type="text" class="form-control" id="userStatus" name="userStatus" required readonly>
-                                                            <span th:id="errorModalUpdateuserStatus+${user.getId()}" class="errorSpan"></span>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <span th:id="serverErrorEditModal+${user.getId()}" class="errorSpan"></span>
                                                         </div>
                                                     </div>
                                                     <div class="modal-footer">
@@ -408,18 +397,14 @@
                                 <td th:text="${user.email}"></td>
                                 <td class="column-credo-text" th:text="${user.userCredo}"></td>
                                 <td>
-                                    <div class="dropdown role">
-                                        <button class="dropbtn role" th:text="${user.role.name().replaceFirst('ROLE_', '').toLowerCase()}">
-                                        </button>
-                                        <img class="rotate" src="/img/arrow-down.svg" alt="arrow-icon">
-                                        <div class="dropdown-content role">
-
-                                            <a class="role-update" th:onclick="'changeRole(\'' + ${user.id} + '\',\'ROLE_ADMIN\');'"
-                                               th:if="${!user.role.name().equals('ROLE_ADMIN')}">admin</a>
-                                            <a class="role-update" th:onclick="'changeRole(\'' + ${user.id} + '\',\'ROLE_USER\');'" th:if="${!user.role.name().equals('ROLE_USER')}">user</a>
-                                            <a class="role-update" th:onclick="'changeRole(\'' + ${user.id} + '\',\'ROLE_MODERATOR\');'" th:if="${!user.role.name().equals('ROLE_MODERATOR')}">moderator</a>
-                                        </div>
-                                    </div>
+                                    <select th:id="roleSelector + ${user.id}" th:if="${user.getId()} != ${currentUser.getId()}" class="form-control" name="role" th:onchange="'changeRole(' + ${user.id} + ')'">
+                                        <option class="role-update"
+                                                th:each="role : ${T(greencity.enums.Role).values()}"
+                                                th:text="${role}"
+                                                th:value="${role}"
+                                                th:selected="${role} == ${user.getRole()}">
+                                        </option>
+                                    </select>
                                 </td>
                                 <td th:if="${user.userStatus.name().equals('PENDING')}" class="whiteHover cyan">
                                     <div class="dropdown status" >
