brought back tags for search - filtering by search bar now supports all requested columns; swapped native query in econews repo to jpql query; as search filtering is now supported - disabled the onekeyup dynamic JS filtering per page, as requested

--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -59,7 +59,8 @@
                                     <div>[[#{greenCity.pages.delete}]]</div>
                                 </a>
                                 <a href="#addEcoNewsModal" addEcoNewsForm id="addEcoNewsModalBtn"
-                                   class="btn btn-secondary" data-toggle="modal" th:onclick="addBtnDisabled()">
+                                   class="btn btn-secondary" data-toggle="modal" >
+<!--                                    th:onclick="addBtnDisabled()"-->
                                     <div>[[#{greenCity.econews.page.add.eco.news}]]</div>
                                 </a>
                             </div>
@@ -69,8 +70,7 @@
                             <div class="main-search">
                                 <!-- Search Form  -->
                                 <form th:action="@{eco-news}" class="form-inline searching">
-                                    <input id="search" type="text" class="form-search" th:name="query"
-                                           onkeyup="searchTableFunction()">
+                                    <input id="search" type="text" class="form-search" th:name="query">
                                     <input class="search-submit-btn" type="submit">
                                 </form>
                                 <button id="econews-filter-button" class="filter-button"
